<resources>
    <string name="app_name">Sweet Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="error_title">Houve um pequeno problema :(</string>
    <string name="tv_login">Login</string>
    <string name="tv_email">Email</string>
    <string name="hint_e_mail">E-mail</string>
    <string name="tv_password">Senha</string>
    <string name="hint_password" translatable="false">*********</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="entry">Entrar</string>
    <string name="bt_create_account">Ainda não tem uma conta? </string>
    <string name="create_account_2"> Cadastre-se</string>
    <string-array name="ProfileTypes">
        <item key="MODERATE">Moderado</item>
        <item key="EDUCATION">Educação Alimentar</item>
        <item key="COMPULSIVE">Compulsivo</item>
        <item key="DIABETIC">Diabético</item>
    </string-array>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard">Pedidos</string>
    <string name="title_notifications">Perfil</string>
    <string name="confeitarias">Confeitarias</string>
    <string name="ver_mais">Ver mais</string>
    <string name="ver_detalhes">Ver detalhes</string>
    <string name="forma_de_pagamento">Forma de pagamento</string>
    <string name="vencimento">Vencimento</string>
    <string name="save">Salvar</string>
    <string name="cadastro">Cadastro</string>
    <string name="name">Nome</string>
    <string name="tipo_de_perfil">Tipo de Perfil</string>
    <string name="telefone">Telefone</string>
    <string name="rua">Rua</string>
    <string name="numero">Numero</string>
    <string name="complemento">Complemento</string>
    <string name="terms_of_use">Ao continuar, você concorda com os</string>
    <string name="termos_de_uso">Termos de uso</string>
    <string name="voltar">Voltar</string>
    <string name="pr_ximo">Próximo</string>
    <string name="j_tem_uma_conta">Já tem uma conta?</string>
    <string name="help">Dúvidas</string>
    <string name="Ajuda">Ajuda</string>
    <string name="sobre">Sobre nós</string>
    <string name="logout">Sair</string>
    <string name="product">Produtos</string>
    <string name="next">Próximo</string>
    <string name="cart">Carrinho</string>
    <string name="image_confectionery">image_confectionery</string>
    <string name="real">R$</string>
    <string name="informa_es_nutricionais">Informações Nutricionais</string>
    <string name="kcal">kcal</string>
    <string name="gramas">g</string>
    <string name="frete">Frete</string>
    <string name="subtotal">Subtotal</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string-array name="PaymentMethod">
        <item key="DEBIT">Débito</item>
        <item key="CREDIT">Crédito</item>
    </string-array>
</resources>