<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="438dp"
        android:layout_height="133dp"
        android:scaleType="fitStart"
        android:src="@drawable/banner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/tv_login"
            android:textColor="@color/primary"
            android:textSize="36sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="8dp"

            android:fontFamily="@font/rubik_light"
            android:text="@string/tv_email"
            android:textColor="@color/primary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_style"
            android:hint="@string/hint_e_mail"
            android:padding="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/rubik_light"
            android:inputType="textEmailAddress"
            android:text="@string/tv_password"
            android:textColor="@color/primary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_style"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="64dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:onClick="goLogin"
                android:text="@string/entry"
                android:background="@color/primary"
                android:textAlignment="center"
                android:textColor="#FFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="goToPageSignUp">

                <TextView
                    android:layout_width="208dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/bt_create_account"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  " />

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/create_account_2"
                    android:textColor="@color/secondary"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>