<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SingUpActivity">


    <ImageView
        android:layout_width="438dp"
        android:layout_height="105dp"
        android:scaleType="fitStart"
        android:src="@drawable/banner" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/cadastro"
                android:textColor="@color/primary"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/progressBar"
                android:layout_width="316dp"
                android:layout_height="91dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitStart"
                android:src="@drawable/progress_bar_1" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/rubik_light"
                android:text="@string/name"
                android:textColor="@color/primary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/et_style"
                android:hint="@string/name"

                android:padding="20dp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/rubik_light"
                android:text="@string/tv_email"
                android:textColor="@color/primary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/et_style"
                android:hint="@string/tv_email"
                android:inputType="textEmailAddress"
                android:padding="20dp" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/rubik_light"
                android:text="@string/tv_password"
                android:textColor="@color/primary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/et_style"
                android:hint="*********"
                android:inputType="textPassword"
                android:padding="20dp" />

            <TextView
                android:id="@+id/tvProfileType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/rubik_light"
                android:text="@string/tipo_de_perfil"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spProfileType"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/et_style"
                android:hint="Moderado"
                android:padding="20dp"
                android:spinnerMode="dropdown"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/rubik_light"
                android:text="@string/telefone"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/et_style"
                android:hint="(11) 91234-5678"
                android:inputType="phone"
                android:padding="20dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvCep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/rubik_light"
                android:text="CEP"
                android:textColor="@color/primary"
                android:textSize="16dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etCep"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/et_style"
                android:hint="Escolha seu CEP"
                android:padding="20dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/rubik_light"
                android:text="@string/rua"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etStreet"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/et_style"
                android:hint="@string/rua"
                android:padding="20dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvStreetNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/rubik_light"
                        android:text="@string/numero"
                        android:textColor="@color/primary"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/etStreetNumber"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@drawable/et_style"
                        android:hint="00"
                        android:inputType="number"
                        android:padding="20dp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvComplement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/rubik_light"
                        android:text="@string/complemento"
                        android:textColor="@color/primary"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/etComplement"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@drawable/et_style"
                        android:hint="@string/complemento"
                        android:padding="20dp"
                        android:visibility="gone" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="goToPageTermsOfUse">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/terms_of_use"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primary"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/termos_de_uso"
                    android:textColor="@color/secondary"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/backButton"
                    android:layout_width="240dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/bt_style"
                    android:onClick="backStep"
                    android:backgroundTint="@color/primary"
                    android:text="@string/voltar"
                    android:textAlignment="center"
                    android:textColor="#FFFF"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="240dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/primary"
                    android:layout_weight="1"
                    android:background="@drawable/bt_style"
                    android:onClick="nextStep"
                    android:text="@string/pr_ximo"
                    android:textAlignment="center"
                    android:textColor="#FFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:onClick="goToPageLogin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="208dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="@string/j_tem_uma_conta"
                        android:textAlignment="textEnd"
                        android:textColor="@color/primary"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/rubik_medium"
                        android:text="  Login"
                        android:textColor="@color/secondary"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>