<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".cart.Cart">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/rubik_medium"
                android:gravity="center"
                android:text="@string/cart"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="20sp" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="18dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRecyclerContainer"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            tools:itemCount="3"
            tools:listitem="@layout/res_card_cart"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_light"
                android:text="@string/subtotal"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/subtotal_item_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_bold"
                android:text="R$ 0,00"
                android:textColor="@color/black" />

        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:fontFamily="@font/rubik_light"-->
<!--                android:text="Desconto"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="16sp" />-->


<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/rubik_bold"-->
<!--                android:text="R$27,30"-->
<!--                android:textColor="@color/black" />-->

<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_light"
                android:text="@string/frete"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/frete_item_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_bold"
                android:text="R$ 0,00"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_bold"
                android:text="Total"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/total_item_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_bold"
                android:text="R$ 0,00"
                android:textColor="@color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/cart_next_button"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bt_style"
            android:backgroundTint="@color/text_banner"
            android:text="@string/next"
            android:textAlignment="center"
            android:textColor="#FFFF" />

    </LinearLayout>
</LinearLayout>